// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Image> renders 1`] = `
<View
  style={
    Array [
      Object {
        "alignContent": "center",
        "alignItems": "center",
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <Image
    onLoad={[Function]}
  />
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#e3e3e3",
          "minHeight": 8,
          "minWidth": 8,
        },
        Array [
          undefined,
          Object {
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          },
        ],
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#ffffff",
          "height": "100%",
          "width": "100%",
        }
      }
    />
  </View>
</View>
`;

exports[`<Image> when {source} 1`] = `
<View
  style={
    Array [
      Object {
        "alignContent": "center",
        "alignItems": "center",
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <Image
    onLoad={[Function]}
    source={
      Object {
        "uri": "https://picsum.photos/320/200/?random",
      }
    }
  />
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#e3e3e3",
          "minHeight": 8,
          "minWidth": 8,
        },
        Array [
          undefined,
          Object {
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          },
        ],
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#ffffff",
          "height": "100%",
          "opacity": 0,
          "width": "100%",
        }
      }
    />
  </View>
</View>
`;

exports[`<Image> when {style} 1`] = `
<View
  style={
    Array [
      Object {
        "alignContent": "center",
        "alignItems": "center",
        "justifyContent": "center",
      },
      Object {
        "backgroundColor": "#e85a7e",
      },
    ]
  }
>
  <Image
    onLoad={[Function]}
    style={
      Object {
        "backgroundColor": "#e85a7e",
      }
    }
  />
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#e3e3e3",
          "minHeight": 8,
          "minWidth": 8,
        },
        Array [
          Object {
            "backgroundColor": "#e85a7e",
          },
          Object {
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          },
        ],
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#ffffff",
          "height": "100%",
          "width": "100%",
        }
      }
    />
  </View>
</View>
`;
